--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <H1>Home</H1>
 
-<P> Hello, welcome to CSC 138!
+<P> Hello, welcome to CSC 196W!
 
 </font>
 </ul>
@@ -28,7 +28,7 @@
 
 <p class=MsoNormal><br>
 <font face="Times New Roman">
-last update: april 2,2021.
+last update: September 18,2021
 </font>
 </p>
 
