--- a/index.html
+++ b/index.html
@@ -1,40 +1,105 @@
-<HTML>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Fancify Shamcify</title>
 
-<HEAD>
+		<!-- link to your script file here -->
+		<script src="fancifymytext.js">
 
-<TITLE>Untitled</TITLE>
+		</script>
+		
+	</head>
+	<style>
 
-</HEAD>
+		input[type = text]{
 
-<BODY BGCOLOR="FFFFFF">
+		   width: 100%;
+		   padding: 12px 20px;
+		   margin: 8px 0;
+		   box-sizing: border-box;
+		   border: 2px solid red;
+		   border-radius: 4px;
 
-
-
-<HR>
-
-
-
-<H1>Home</H1>
-
-<P> Hello, welcome to CSC 196W!
-
-</font>
-</ul>
-
-<div class=MsoNormal align=center style = 'text-align:center'>
-<hr size=2 width = "100%" align=center>
-</div>
+	  }          
 
 
-<p class=MsoNormal><br>
-<font face="Times New Roman">
-last update: September 18,2021
-</font>
-</p>
+	   .button {
+
+		  border: none;
+		  color: white;
+		  padding: 16px 32px;
+		  text-align: center;
+		  text-decoration: none;
+		   display: inline-block;
+		   font-size: 16px;
+		  margin: 4px 2px;
+		 transition-duration: 0.4s;
+		 cursor: pointer;
+	 }
+
+		.button1 {
+		  background-color: white; 
+		  color: black; 
+		  border: 2px solid #4c56af;
+	   }
+
+		.button1:hover {
+		 background-color: #4c56af;
+		 color: white;
+		 }
 
 
-<HR>
+		 .button2 {
+		  background-color: white; 
+		  color: black; 
+		  border: 2px solid #4c56af;
+	   }
 
-</BODY>
+		.button2:hover {
+		 background-color: #4c56af;
+		 color: white;
+		 }
 
-</HTML>
+   </style>
+
+
+
+	<body>
+		<h1>Fancify my Text</h1>
+        <!-- Your UI controls go here -->
+
+		
+
+		<form>
+			<label for="text">text</label>
+			<input type="text" id="text" name="text">	
+		</form>
+
+		
+
+
+	
+
+
+		<fieldset>
+			<legend>Fancify </legend>
+
+			<button id="button1"> Bigger</button>
+			<button id="button2">Moo</button>
+		
+			<div>
+			  <input type="radio" id="FancyShmancy" name="drone" value="FancyShmancy">
+			  <label for="FancyShmancy">FancyShmancy</label>
+			</div>
+		
+			<div>
+			  <input type="radio" id="BoringBetty" name="drone" value="BoringBetty">
+			  <label for="BoringBetty">BoringBetty</label>
+			</div>
+		
+			
+		</fieldset>
+
+
+	</body>
+</html>
